# ratatui-labs

./: .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  release-plz.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-plz.yml
crates/ratatui-action/: Cargo.toml  README.md
crates/ratatui-action/src/: id.rs  input.rs  invocation.rs  lib.rs  spec.rs
crates/ratatui-command-palette/: Cargo.toml  README.md
crates/ratatui-command-palette/examples/: command-palette.rs  renderer-gallery.rs
crates/ratatui-command-palette/src/: event.rs  key.rs  lib.rs  matching.rs  selection.rs  shortcut.rs  state.rs  state_tests.rs  view.rs
crates/ratatui-command-palette/src/render/: flat.rs  fullscreen.rs  inline.rs  mod.rs  modal.rs  parts.rs  split.rs
crates/ratatui-labs/: Cargo.toml  README.md
crates/ratatui-labs/examples/: command-palette.rs
crates/ratatui-labs/src/: action.rs  command_palette.rs  lib.rs
crates/ratatui-labs/src/command_palette/: render.rs
crates/ratatui-layout/: Cargo.toml  README.md
crates/ratatui-layout/src/: lib.rs
crates/ratatui-layout/use-cases/: 0002-modal-dialog-coordination.md  0004-multi-pane-scroll-routing.md  0006-virtual-table-inspection.md  0007-component-frame-composition.md  0008-mouse-overlays-and-disabled-targets.md  0009-form-editing.md  0011-nested-event-routing-and-focus-scopes.md
docs/adrs/: 0001-command-palette-crate-shape.md  0002-action-api-construction-and-field-visibility.md  0003-owned-palette-view-data.md  0004-betamax-rendered-validation.md
docs/prds/: command-palette.md
tapes/: command-palette.tape  jk-log-ui.tape
tapes/renderers/: flat.tape  fullscreen.tape  inline.tape  modal.tape  split.tape
