[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ratatui/ratatui"
homepage = "https://ratatui.rs"
keywords = ["ratatui", "tui", "terminal", "ui"]
categories = ["command-line-interface"]

[workspace.lints.rust]
unsafe_code = "forbid"
