[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ratatui/ratatui-labs"
homepage = "https://ratatui.rs"
rust-version = "1.88.0"
keywords = ["ratatui", "tui", "terminal", "ui"]
categories = ["command-line-interface"]

[workspace.lints.rust]
unsafe_code = "forbid"
