[package]
name = "ratatui-labs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reserved for Ratatui labs-style experiments and prototype Ratatui work."
documentation = "https://docs.rs/ratatui-labs"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[package.metadata.ratatui-reservation]
area = "Experimental APIs"
future_scope = "labs-style experiments and prototype Ratatui work"

[dependencies]
ratatui-action = { path = "../ratatui-action", version = "0.0.0" }
ratatui-command-palette = { path = "../ratatui-command-palette", version = "0.0.0" }

[lints]
workspace = true
