[package]
name = "ratatui-labs"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reserved for Ratatui labs-style experiments and prototype Ratatui work."
documentation = "https://docs.rs/ratatui-labs"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[package.metadata.ratatui-reservation]
area = "Experimental APIs"
future_scope = "labs-style experiments and prototype Ratatui work"

[dependencies]
ratatui-core = "0.1.2"
ratatui-action = { path = "../ratatui-action", version = "0.1.0" }
ratatui-command-palette = { path = "../ratatui-command-palette", version = "0.1.0" }
ratatui-layout = { path = "../ratatui-layout", version = "0.0.1-alpha.0" }

[lints]
workspace = true
